# InsNet

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  LICENSE  LICENSE-2.0.txt  MIT-LICENSE  README.md  README.rst  compile_commands.json
cnmem/: CMakeLists.txt
cuda/: CMakeLists.txt  Memory_cuda.h  N3LDG_cuda.cu  N3LDG_cuda.h  Printf_cuda.cu  host_allocate.h  memory_pool.h  n3ldg_cuda.cu  n3ldg_cuda.h
docs/doxygen/: Doxyfile
docs/source/: auto_batch.rst  benchmark.rst  conf.py  dynamic_batch.rst  getting_started.rst  index.rst  install.rst  reference.rst
include/: APCOP.h  APOP.h  APParam.h  ActionOP.h  Alphabet.h  Argument_helper.h  AtomicOP.h  Attention.h  AttentionHelp.h  BaseParam.h  BiOP.h  Biaffine.h  BucketOP.h  COPUtils.h  CheckGrad.h  Concat.h  DEPLSTM1.h  Def.h  Div.h  FourOP.h  GRU.h  Graph.h  LSTM1.h  LSTM2.h  Layer.h  LogSoftMax.h  LookupTable.h  Loss.h  MatrixNode.h  MaxProbabilityLoss.h  Metric.h  ModelUpdate.h  MyLib.h  MyTensor-def.h  MyTensor.h  N3LDG.h  NRMat.h  Node.h  PAddOP.h  PMultiOP.h  (+19 more)
include/eigen/unsupported/Eigen/CXX11/src/Tensor/: TensorRandom.h
include/fmt/: CMakeLists.txt
include/insnet/: insnet.h
include/insnet/base/: def.cc  def.h  eigen-def.h  memory.cc  memory.h  tensor.cc  tensor.h  transferable.cc  transferable.h
include/insnet/block/: attention.cc  attention.h  gru.cc  gru.h  lstm.cc  lstm.h  transformer.cc  transformer.h
include/insnet/computation-graph/: graph.cc  graph.h  node.cc  node.h
include/insnet/cuda/: helper_cuda.h  impl.cu  insnet_cuda.h  memory_pool.h
include/insnet/loss/: loss.cc  loss.h
include/insnet/nlp/: vocab.cc  vocab.h
include/insnet/operator/: add.cc  add.h  atomic.cc  atomic.h  broadcast.cc  broadcast.h  bucket.cc  bucket.h  concat.cc  concat.h  def.h  div.cc  div.h  embedding.cc  embedding.h  layer_normalization.cc  layer_normalization.h  linear.cc  linear.h  log_softmax.cc  log_softmax.h  matrix.cc  matrix.h  mul.cc  mul.h  param.cc  param.h  pooling.cc  pooling.h  softmax.cc  softmax.h  split.cc  split.h  sub.cc  sub.h
include/insnet/optimizer/: adagrad.cc  adagrad.h  adam.cc  adam.h  adamw.cc  adamw.h  optimizer.cc  optimizer.h
include/insnet/param/: base-param.cc  base-param.h  param.cc  param.h  sparse-param.cc  sparse-param.h
include/insnet/util/: check-grad.h  metric.h  nrmat.h  profiler.cc  profiler.h  util.cc  util.h
include/n3ldg-plus/: n3ldg-plus.cc  n3ldg-plus.h
include/n3ldg-plus/base/: def.cc  def.h  eigen-def.h  memory.cc  memory.h  serializable.cc  serializable.h  tensor-def.h  tensor.cc  tensor.h  transferable.cc  transferable.h
include/n3ldg-plus/block/: attention.cc  attention.h  gru.cc  gru.h  lstm.cc  lstm.h  transformer.cc  transformer.h
include/n3ldg-plus/computation-graph/: graph.cc  graph.h  node.cc  node.h
include/n3ldg-plus/cuda/: Memory_cuda.h  N3LDG_cuda.cu  N3LDG_cuda.h  Printf_cuda.cu  helper_cuda.h  impl.cu  memory_pool.h  n3ldg_plus_cuda.h  print.cu
include/n3ldg-plus/loss/: loss.cc  loss.h
include/n3ldg-plus/nlp/: alphabet.cc  alphabet.h  vocab.cc  vocab.h
include/n3ldg-plus/operator/: add.cc  add.h  atomic.cc  atomic.h  broadcast.cc  broadcast.h  bucket.cc  bucket.h  concat.cc  concat.h  def.h  div.cc  div.h  embedding.cc  embedding.h  layer_normalization.cc  layer_normalization.h  linear.cc  linear.h  matrix.cc  matrix.h  mul.cc  mul.h  pooling.cc  pooling.h  softmax.cc  softmax.h  split.cc  split.h  sub.cc  sub.h
include/n3ldg-plus/optimizer/: adagrad.cc  adagrad.h  adam.cc  adam.h  adamw.cc  adamw.h  optimizer.cc  optimizer.h
include/n3ldg-plus/param/: base-param.cc  base-param.h  param.cc  param.h  sparse-op.h  sparse-param.cc  sparse-param.h
include/n3ldg-plus/util/: check-grad.h  metric.h  nrmat.h  profiler.cc  profiler.h  util.cc  util.h
